                             respectively ) for operational use.  The templates
                             were assigned WMO values of 5.40 and 5.41, 
                             respectively.  Changes were made to the source to 
                             recognize either template number.
                           - Fixed bug encountered when packing a near constant
                             field with DRT 5.40 or 5.40000 (JPEG2000).
                           - Added consistency check, provided by 
                             Arthur Taylor/MDL, used when unpacking Data 
                             Templates 7.2 and 7.3.
                           - Corrected the documentation for subroutine
                             addfield in the grib2.doc file.  Incorrect
                             arguments were specified for this routine.
                           - Corrected bug when packing Secondary missing
                             values in Data Representation Templates 5.2 and
                             5.3.

g2lib-1.0.6 - April 2005 - Modified the way GETGB2 manages the GRIB2 file 
                           indexes, so that it can be more efficient and
                           flexible when reading from multiple
                           GRIB2 files.
                         - Fixed bug in PUTGB2 that caused data fields to be
                           encoded incorrectly.
                         - Added routine gdt2gds that converts grid information
                           from a GRIB2 Grid Description Section (GDS) and
                           Grid Definition Template to GRIB1 GDS info.

g2lib-1.0.7 - April 2005 - Fixed bug causing seg fault when using JPEG2000 
                           encoding algorithm on a grid with an insanely large
                           number of data points bitmapped out.

gslib-1.0.7.1 - December 2006
			- Added new local parameter conversion entries